--- a/src/webparts/linkCards/components/LinkCards.module.scss
+++ b/src/webparts/linkCards/components/LinkCards.module.scss
@@ -53,6 +53,10 @@
   justify-content: center;
   border-radius: 5px;
 }
+.info__container {
+  width: 70%;
+  padding-top: 10px;
+}
 
 .title {
   text-align: center;
@@ -66,14 +70,36 @@
   }
 }
 
+/*** mock **/
+// .word-breaker-description {
+//   width: 100%;
+//   margin: 0 0 1em 0;
+//   overflow: hidden;
+// }
+// .line-clamp {
+//   display: -webkit-box;
+//   -webkit-line-clamp: 2;
+//   -webkit-box-orient: vertical;
+// }
+
+.info__description {
+  width: 100%;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  text-align: center;
+  padding: 5px;
+  height: 50px;
+}
 .card__button {
   color: #fff;
   text-decoration: none;
   text-align: center;
   font-weight: 600;
-  padding: 5px 5px -5px 5px;
+  padding: 7px;
   transition: background-color 300ms ease-out;
-
+  display: inline-block;
   &:hover {
     cursor: pointer;
     background-color: rgba(120, 60, 189, 0.598);
@@ -112,13 +138,13 @@
 
   .card {
     flex-direction: column;
-    min-height: 200px;
-    max-height: 250px;
+    min-height: 240px;
+    max-height: 255px;
   }
 
   .image__container {
     width: 50%;
-    height: 50%;
+    height: 30%;
 
     img {
       height: 90%;
@@ -139,11 +165,12 @@
 
   .card {
     flex-direction: column;
-    height: 200px;
+    height: 255px;
+    max-height: 255px;
   }
 
   .image__container {
-    height: 50%;
+    height: 30%;
     width: 50%;
 
     img {
