--- a/src/webparts/linkCards/components/LinkCards.module.scss
+++ b/src/webparts/linkCards/components/LinkCards.module.scss
@@ -45,6 +45,7 @@
     height: 100%;
     align-items: self-end;
     justify-content: center;
+    font-weight: 900;
   }
 }
 
@@ -79,18 +80,6 @@
     font-weight: 900;
   }
 }
-
-/*** mock **/
-// .word-breaker-description {
-//   width: 100%;
-//   margin: 0 0 1em 0;
-//   overflow: hidden;
-// }
-// .line-clamp {
-//   display: -webkit-box;
-//   -webkit-line-clamp: 2;
-//   -webkit-box-orient: vertical;
-// }
 
 .info__description {
   width: 100%;
@@ -155,14 +144,17 @@
   .image__container {
     width: 50%;
     height: 30%;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px;
     img {
-      height: 90%;
-      min-height: 90%;
-      width: 90%;
-      min-width: 90%;
+      height: 100%;
+      min-height: 100%;
+      width: 100%;
+      min-width: 100%;
       display: block;
-      object-fit: cover;
+      object-fit: contain;
     }
   }
 }
@@ -182,12 +174,17 @@
   .image__container {
     height: 30%;
     width: 50%;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px;
     img {
-      height: 90%;
-      width: 90%;
+      height: 100%;
+      min-height: 100%;
+      width: 100%;
+      min-width: 100%;
       display: block;
-      object-fit: cover;
+      object-fit: contain;
     }
   }
 }
@@ -207,12 +204,17 @@
   .image__container {
     width: 30%;
     height: 80%;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px;
     img {
-      height: 90%;
-      width: 90%;
+      height: 100%;
+      min-height: 100%;
+      width: 100%;
+      min-width: 100%;
       display: block;
-      object-fit: cover;
+      object-fit: contain;
     }
   }
 }
